fix width overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -538,7 +538,7 @@ h1 {
     }
 
     to {
-        width: 34.2rem;
+        width: 100%;
     }
 }
 
